--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 	/* default sizing */
 	--lg-container: 1000px;
 	--sm-container: 400px;
-	--header-height: 50px;
+	--header-height: 60px;
 }
 
 *,
@@ -22,6 +22,7 @@
 }
 
 body {
+	font-size: 16px;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
 		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
 		sans-serif;
@@ -32,4 +33,18 @@ body {
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 		monospace;
+}
+
+a {
+	text-decoration: none;
+	color: inherit;
+}
+
+br {
+	color: inherit;
+	background-color: var(--dark);
+	border-color: var(--dark);
+	border-style: solid;
+	border-width: 2px;
+	display: block;
 }
